# pathlib-tree

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pylintrc  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  main.yml  unittest.yml
docs/code/: index.rst
docs/code/systematic_files/: exceptions.rst  index.rst  patterns.rst  tree.rst
docs/code/systematic_files/mounts/platform/: base.rst  darwin.rst  index.rst
docs/code/systematic_files/sync/: configuration.rst  constants.rst  index.rst  target.rst
docs/source/code/: index.rst
docs/source/code/mounts/: index.rst  test_bsd_mountpoints.rst  test_darwin_mountpoints.rst  test_linux_mountpoints.rst  test_native_mountpoints.rst  test_openbsd_mountpoints.rst  test_unknown_mountpoints_platforrm.rst
docs/source/code/systematic_files/: __init__.rst  errors.rst  index.rst  utils.rst  version.rst
docs/source/code/systematic_files/mounts/: __init__.rst  constants.rst  index.rst
docs/source/code/systematic_files/mounts/platform/: __init__.rst  bsd.rst  linux.rst  openbsd.rst
pathlib_tree/: __init__.py  exceptions.py  patterns.py  tree.py  utils.py
pathlib_tree/mounts/: __init__.py  constants.py  loader.py
pathlib_tree/mounts/platform/: base.py  bsd.py
requirements/: test.txt
systematic_files/: __init__.py  errors.py  exceptions.py  patterns.py  tree.py  utils.py  version.py
systematic_files/mounts/: __init__.py  constants.py
systematic_files/mounts/platform/: __init__.py  base.py  bsd.py  darwin.py  linux.py  openbsd.py
systematic_files/sync/: __init__.py  configuration.py  constants.py  target.py
tests/: __init__.py  conftest.py  test_tree_search.py  test_utils.py  test_version.py  test_version_import.py
tests/mock/tree/a/: README.md  fileordir
tests/mock/tree/b/: README.md
tests/mock/tree/b/fileordir/: missing.txt
tests/mounts/: __init__.py  test_bsd_mountpoints.py  test_darwin_mountpoints.py  test_linux_mountpoints.py  test_native_mountpoints.py  test_openbsd_mountpoints.py  test_unknown_mountpoints_platforrm.py
tests/mounts/data/darwin/: df  mount
tests/mounts/data/freebsd12/: df  mount
tests/mounts/data/linux/: df  mount
tests/mounts/data/openbsd6/: df  mount
tests/patterns/: __init__.py  test_match_path_patterns.py  test_match_path_prefix.py
tests/sync/: __init__.py  test_cli_script.py  test_configuration.py  utils.py
tests/sync/data/: excludes.yml  iconv.yml  minimal.yml  rsync.exclude
tests/tree/: __init__.py  conftest.py  test_tree.py  test_tree_diff.py  test_tree_magic.py  test_tree_search.py  test_tree_subclass.py
