[tool.poetry]
name = "pathlib-tree"
version = "2.2.2"
description = "Filesystem tree utilities"
authors = ["Ilkka Tuohela <hile@iki.fi>"]
license = "PSF"
classifiers = [
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: Python Software Foundation License',
    'Operating System :: POSIX',
    'Operating System :: MacOS :: MacOS X',
    'Programming Language :: Python :: 3',
    'Topic :: System',
]

[tool.poetry.dependencies]
python = "^3.9"
filemagic = "^1.6"
cli-toolkit = "^2.1"
python-magic-bin = {version = "^0.4.14", platform = "win32"}
pylint = "^2.14"

[tool.poetry.dev-dependencies]
coverage = "^6.1"
flake8 = "^5.0"
flake8-bugbear = "^22"
flake8-quotes = "^3.3"
pycodestyle = "^2.8"
pyflakes = "^2.4"
pylint = "^2"
pytest = "^7.1"
tox = "^3"
astroid = "^2"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
