[metadata]
description-file = README.md

[tox]
envlist = py36

[testenv]
deps =
    git+https://git.tuohela.net/systematic-components/systematic-cli.git@1.1.1
    -r requirements/test.txt
commands =
    unittest: coverage run --source systematic_files --module py.test
    unittest: coverage html
    unittest: coverage report

    lint: flake8
    lint: pycodestyle setup.py tests systematic_files
    lint: pylint setup.py tests systematic_files

[tool:pytest]
addopts = --verbose

[pycodestyle]
max-line-length = 120
statistics = True

[flake8]
max-line-length = 120
exclude =
    .git,
    .eggs,
    .tox,
    __pycache__,
    docs/source/conf.py,
    build,
    dist
