[metadata]
description-file = README.md

[tox:tox]
envlist = py36

[testenv]
deps =
    git+https://git.tuohela.net/python/cli-toolkit.git@1.0.0
    -r requirements/test.txt
commands =
    unittest: coverage run --source pathlib_tree --module py.test
    unittest: coverage html
    unittest: coverage report

    lint: flake8
    lint: pycodestyle setup.py tests pathlib_tree
    lint: pylint setup.py tests pathlib_tree

[tool:pytest]
addopts = --verbose

[pycodestyle]
max-line-length = 120
statistics = True

[flake8]
max-line-length = 120
exclude =
    .git,
    .eggs,
    .tox,
    __pycache__,
    docs/source/conf.py,
    build,
    dist
